# l1x-contracts

./: LICENSE  README.md
avdr-contracts/avd/: README.md
avdr-contracts/avd/access_control/: Cargo.toml
avdr-contracts/avd/access_control/src/: lib.rs
avdr-contracts/avd/data_storage/: Cargo.toml
avdr-contracts/avd/version_control/: Cargo.toml
avdr-contracts/avd/version_control/src/: lib.rs
avdr-contracts/gaming/: README.md
avdr-contracts/gaming/game/: Cargo.toml
avdr-contracts/gaming/score_board/: Cargo.toml
avdr-contracts/naming_service/: README.md
avdr-contracts/naming_service/types/: Cargo.toml
avdr-contracts/profile_contracts/: README.md
avdr-contracts/profile_contracts/name_nft/: Cargo.toml
avdr-contracts/profile_contracts/name_service/: Cargo.toml
avdr-contracts/profile_contracts/profile_card/: Cargo.toml
avdr-contracts/profile_contracts/provatar_nft/: Cargo.toml
contemporary/: README.md
contemporary/l1x-contract/: README.md
contemporary/l1x-ft/: Cargo.toml  README.md
contemporary/l1x-nft-1155/: Cargo.toml  README.md
contemporary/l1x-nft-1155/src/: base64_data.rs  lib.rs
contemporary/l1x-nft-721/: Cargo.toml  README.md
cross-contracts/l1x-cross-contracts/l1x-name-storage-contract/: Cargo.toml  README.md
cross-contracts/l1x-cross-contracts/l1x-name-storage-cross-contract/: Cargo.toml  README.md
cross-contracts/l1x-evm-cross-contracts/l1x-cross-contract/: Cargo.toml  README.md
cross-contracts/l1x-evm-cross-contracts/l1x-cross-contract/src/: lib.rs
transfer-token/transfer-native-token/: Cargo.toml  README.md
(+24 files in other folders)
